--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,160 +1,21 @@
 /*
  * Author: Carlos Alvarez
- * URL: http://Alvarez.is
+ * URL: http://alvarez.is
  *
- * Project Name: SHIELD - Free Bootstrap 3 Theme
+ * Project Name: 
  * Version: 1.0
- * Date: 02-11-2013
- * URL: http://blacktie.co/
+ * URL: http://alvarez.is
  */
-
-
-/* ==========================================================================
-   Base Styles and Bootstrap Modifications
-   ========================================================================== */
-
-html,
-button,
-input,
-select,
-textarea {
-    color: #222;
-}
 
 body {
-    font-size: 1em;
-    line-height: 1.4;
-}
-
-/*
- * Remove text-shadow in selection highlight: h5bp.com/i
- * These selection rule sets have to be separate.
- * Customize the background color to match your design.
- */
-
-::-moz-selection {
-    background: #f2c2c9;
-    color: #a4003a;
-    text-shadow: none;
-}
-
-::selection {
-    background: #16a085;
-    color: #a4003a;
-    text-shadow: none;
-}
-
-/*
- * A better looking default horizontal rule
- */
-
- hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-
-/*
- * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
- */
-
- img {
-    vertical-align: middle;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
- textarea {
-    resize: vertical;
-}
-
-
-/* ==========================================================================
-   General styles
-   ========================================================================== */
-
-html,
-body {
-    height: 100%;
-}
-
-body {
+  background-color: #f2f2f2;
     font-family: "Lato";
     font-weight: 300;
-    font-size: 18px;
+    font-size: 16px;
     color: #555;
 
     -webkit-font-smoothing: antialiased;
     -webkit-overflow-scrolling: touch;
-}
-
-.col-md-4 {
-	padding-bottom: 20px;
-}
-
-.row {
-margin-right: 0px;
-margin-left: -15px;
-}
-
-.modal-header {
-	background: #3498db;
-}
-
-.modal-header h4 {
-	color: white;
-}
-
-.modal-footer {
-	background: #2b2b2b;
-}
-
-
-.navbar-default {
-border-color: transparent;
-background-color: #dadada;
-}
-
-
-.navbar-toggle {
-border-color: transparent;
-border: 0px solid transparent;
-}
-
-.navbar-default .navbar-nav > li > a:hover,
-.navbar-default .navbar-nav > li > a:focus {
-	background-color: #16a085;
-	color: white;
-}
-
-
-
-hr {
-    position: relative;
-    border: none;
-}
-
-hr:before {
-    content: " ";
-    position: absolute;
-    top: 0;
-    left: 25%;
-    width: 50%;
-    height: 2px;
-    background: #ccc;
-}
-
-a img {
-    background: white;
-}
-
-.odd a img {
-    background: #f5f5f5;
 }
 
 /* Titles */
@@ -175,70 +36,17 @@ p {
     text-align: center;
 }
 
-.paragraph-lead {
-    font-size: 20px;
-    color: #3498db;
+.goleft {
+	text-align: left;
 }
 
-strong {
-    font-weight: 700;
-}
-
-em {
-    font-weight: 300;
-}
-
-pre {
-    background: #ebebeb;
-    border: none;
-    font-family: "Monaco";
-    font-size: 16px;
-    color: #666;
-    padding: 20px;
-    line-height: 28px;
-}
-
-small {
-    font-size: 12px;
-}
-
-blockquote,
-blockquote p {
-    line-height: 28px;
-    color: #999;
-    font-weight: 300;
-    font-style: italic;
-}
-
-blockquote {
-    position: relative;
-    margin: 0 0 40px -30px;
-    padding-left: 30px;
-    border-left: 5px solid #3498db;
-}
-
-blockquote cite {
-    position: absolute;
-    bottom: -25px;
-    right: 0;
-    font-size: 12px;
-    font-style: italic;
-    color: #333;
-    font-weight: 300;
-}
-
-blockquote cite:before {
-    content: "-- "
-}
-
-/* Images */
-.overflow-image {
-    margin-top: -65px;
+.goright {
+	text-align: right;
 }
 
 /* Links */
 a {
-    color: #3498db;
+    color: #f85c37;
     word-wrap: break-word;
 
     -webkit-transition: color 0.1s ease-in, background 0.1s ease-in;
@@ -250,7 +58,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #c0392b;
+    color: #7b7b7b;
     text-decoration: none;
     outline: 0;
 }
@@ -264,20 +72,108 @@ a:after {
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
 
+ hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+}
+
+/* BOOTSTRAP CHANGES */
+
+/* Button Theme Configuration */
+
+.btn {
+  border-radius: 0px;
+  font-family: 'Lato', sans-serif;
+  font-size: 18px;
+  font-weight: 100;
+}
+.btn-theme {
+  color: white;
+  background-color: transparent;
+  border-color: white;
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.btn-theme:hover {
+	color: #2f2f2f;
+	background-color: white;
+}
 
 
+/* Modal Configuration */
+
+.modal-header {
+	background: #1abc9c;
+}
+
+.modal-header h4 {
+	color: white;
+}
+
+.modal-footer {
+	background: #2b2b2b;
+}
+
+/* Navbar Modification */
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+color: #ffffff;
+background-color: #2c3e50;
+}
+
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #2c3e50;
+}
+
+.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
+color: #ffffff;
+text-decoration: none;
+background-color: #2c3e50;
+outline: 0;
+}
+
+/* Form Modifications */
+
+.form-control {
+	border-radius: 0px;
+	padding: 10px 18px;
+	font-size: 18px;
+	font-family: 'Lato', sans-serif;
+	color: #2f2f2f;
+	font-weight: 100;
+}
+
+input {
+	padding: 10px 18px;
+}
+
+label {
+	font-weight: 500;
+	font-family: 'Raleway', sans-serif;
+}
+
+input[type="submit"] {
+	border: 0px;
+}
 /* ==========================================================================
    Wrap Sections
    ========================================================================== */
 
 #headerwrap {
-	background: url(../img/header_bg.jpg) no-repeat center top;
-	margin-top: -50px;
-	padding-top:120px;
-	text-align:center;
+	background: url(../img/header-bg.jpg) no-repeat center top;
+	margin-top: 50px;
+	padding-top:20px;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 650px;
+	min-height: 500px;
 	width: 100%;
 	
     -webkit-background-size: 100%;
@@ -292,110 +188,23 @@ a:after {
 }
 
 #headerwrap h1 {
-	color:#ffffff;
-	margin-top: 90px;
-	padding-bottom: 30px;
-	letter-spacing: 8px;
-	font-size: 100px;
-	font-weight: bold;
-	text-shadow: 2px 2px 2px #000;
-}
-
-#headerwrap p {
-	color:#ffffff;
-	font-size: 40px;
-	font-weight: 400;
-	text-align: center;
-	line-height: 40px;
-	letter-spacing: 3px;
-	margin-left: 15px;
-	text-shadow: 1px 1px 1px #000;
-}
-
-#darkwrap {
-	background: #f5f5f5;
-	margin-top: 0px;
-	padding-top: 40px;
-	border-bottom: 1px solid #ddd;
-	text-align: center;
-}
-
-#greywrap {
-	background: #f5f5f5;
-	margin-top: 0px;
-	padding-top: 40px;
-	border-bottom: 1px solid #ddd;
-	text-align: center;
-}
-
-#greywrap .callout {
-	margin-bottom: 20px;
-}
-
-#greywrap p {
-	margin-left: 30px;
-	margin-right: 30px;
-	letter-spacing: 1px;
-	padding-top: 15px;
-	padding-bottom: 15px;
-}
-
-#greywrap .icon {
-	font-size: 60px;
-	line-height: 30px;
-	margin-bottom: 10px;
-}
-
-#contact .icon {
-	font-size: 60px;
-	line-height: 30px;
-	margin-bottom: 10px;
-}
-
-#footerwrap {
-	background: #2b2b2b;
-	margin-top: 0px;
-	padding-top: 40px;
-	padding-bottom: 20px;
-	border-bottom: 1px solid #ddd;
-	text-align: center;
-}
-
-#footerwrap h4 {
+	margin-top: 70px;
 	color: white;
+	font-size: 55px;
+	font-weight: 100;
+	letter-spacing: 2px;
+	text-align: left;
 }
 
-
-/* ==========================================================================
-   Box Sections
-   ========================================================================== */
-
-.white h1 {
-	padding-top: 35px;
-}
-
-.white p {
-	padding-top: 25px;
-}
-
-/* Section Dividers */
-.section-divider {
-    z-index: 999;
-    width: 100%;
-    display: table;
-    max-height: 450px;
-    border-bottom: 2px solid #E6EAED;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -ms-box-sizing: border-box;
-    box-sizing: border-box;
-    padding-top: 30px;
-    padding-bottom: 70px;
-    margin-top: 45px;
-
-
-    background-position: center center;
-
+#headerwrap2 {
+	background: url(../img/header-bg2.jpg) no-repeat center top;
+	margin-top: 50px;
+	padding-top:20px;
+	background-attachment: relative;
+	background-position: center center;
+	min-height: 500px;
+	width: 100%;
+	
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
@@ -405,96 +214,352 @@ a:after {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-
-    background-attachment: relative;
-    
-    text-align: center;
 }
 
-.textdivider h1 {
-	padding-top: 70px;
+#headerwrap2 h1 {
+	margin-top: 150px;
 	color: white;
-	font-size: 40px;
+	font-size: 55px;
+	font-weight: 100;
+	letter-spacing: 2px;
 }
 
-.textdivider p {
+/* About Wrap */
+
+#about {
+	background: url(../img/about-bg.jpg) no-repeat center top;
+	padding-top:20px;
+	background-attachment: relative;
+	background-position: center center;
+	min-height: 450px;
+	width: 100%;
+	
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#about h1 {
+	margin-top: 150px;
 	color: white;
-	font-size: 25px;
+	font-size: 55px;
+	font-weight: 100;
+	letter-spacing: 2px;
+}
+
+/* Services Wrap */
+
+#services {
+	background: url(../img/services-bg.jpg) no-repeat center top;
+	padding-top:20px;
+	background-attachment: relative;
+	background-position: center center;
+	min-height: 450px;
+	width: 100%;
+	
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 
-/* Section Dividers Backgrounds */
 
-.divider1 {
-	background-image: url('../img/bg/divider1.jpg')
+/* Yellow Wrap */
+#y {
+	background: #f1c40f;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
-.divider2 {
-	background-image: url('../img/bg/divider2.jpg')
+#y .glyphicon {
+	font-size: 60px;
+	color: white;
 }
 
-.divider3 {
-	background-image: url('../img/bg/divider3.jpg');
-	margin-top: 0px;
+#y h3 {
+	color: white;
 }
 
-.divider4 {
-	background-image: url('../img/bg/divider4.jpg')
+#y p {
+	font-weight: 500;
 }
 
-.divider6 {
-	background-image: url('../img/bg/divider6.jpg')
+/* Dark Blue Wrap */
+#db {
+	background: #2c3e50;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
+#db h2 {
+	color: white;
+}
+
+#db h3 {
+	color: white;
+}
+
+
+#db p {
+	color: white;
+}
+
+#db .col-lg-2 {
+	padding-left: 0px;
+	padding-right: 0px;
+}
+
+/* White Wrap - Version 1 */
+
+#w1 {
+	background: #ffffff;
+	padding-top: 50px;
+	padding-bottom: 0px;
+}
+
+
+#w1 i {
+	font-size: 70px;
+	color: #2f2f2f;
+	padding-bottom: 30px;
+	padding-left: 23px;
+	padding-right: 23px;
+}
+
+#w1 i:hover {
+	color: #f1c40f
+}
+
+
+#w1 h1 {
+	font-size: 90px;
+}
+
+/* White Wrap - Version 2 */
+
+#w2 {
+	background: #ffffff;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+#w2 i {
+	font-size: 70px;
+	color: #2f2f2f;
+	padding-bottom: 30px;
+}
+
+#w2 i:hover {
+	color: #f1c40f
+}
+
+/* Footer Wrap */
+
+#f {
+	background: #2c3e50;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+#f h3 {
+	color: white;
+}
+
+#f p {
+	color: white;
+}
+
+
+/* Map Wrap */
+
+#map {
+	width: 100%
+}
+
+/* Copyright */
+
+#c {
+	background: #2f2f2f;
+	padding-top: 15px;
+}
+
+#c p {
+	color: white;
+	font-size: 18px;
+}
 
 
 /* ==========================================================================
-   Services Section
+   Blog Configuration
    ========================================================================== */
 
-.service-trigger {
-    display: block;
-	position: relative;
-    margin-bottom: 15px;
-    color: white;
-    font-size: 20px;
-    text-align: center;
-    height: 168px;
-    cursor: pointer;
-	padding: 90px 20px 50px 20px;
-    border: none;
-    background: #333;
+
+/* Blog Page Zones & Conf*/
+
+.main-blog {
+	padding-top: 90px;
 }
 
-.service-trigger:before {
-    width: 100%;
-    top: 50px;
-    color: #3498db;
-    font-size: 36px;
-    text-align: center;
-	position: absolute;
-	left: 0;
+.blog-date {
+	display: block;
+	padding-top: 40px;
 }
 
-.service-active .service-trigger {
-    background: #222;
+.blog-date p {
+	text-align: right;
+	margin-right: 10px;
+	font-size: 13px;
+	letter-spacing: 1px;
 }
 
-.service-active p {
-	font-family: 'Lato', sans-serif;
-	padding-top: 10px;
+.blog-date h6 {
+	font-weight: 800;
+	text-align: right;
+	margin-right: 10px;
+	letter-spacing: 1px;
 }
 
-.service-content {
-    padding: 15px 20px;
-    background: #e6eaed;
-    display: block;
-    height: auto
+.blog-title {
+	padding-top: 40px;
+	margin-bottom: 20px;
 }
 
-.service-content p:last-child {
-    margin: 0;
+.blog-title h2 {
+	margin-top: 0px;
+	font-size: 40px;
+	line-height: 50px;
+	letter-spacing: 3px;
+	text-align: left;
+	font-weight: 400;
+	margin-left: 5px;
 }
+
+.blog-post {
+	text-align: left;
+	margin-right: 0px;
+	font-size: 16px;
+}
+
+.blog-post h2 {
+	margin-top: 0px;
+	font-size: 40px;
+	line-height: 50px;
+	letter-spacing: 3px;
+	text-align: left;
+	font-weight: 400;
+	width: 100%;
+	padding-top: 40px;
+	margin-bottom: 20px;
+}
+
+
+.blog-post em {
+	text-align: left;
+	font-size: 22px;
+	color: #767676;	
+}
+
+.blog-post i {
+	letter-spacing: 10px;
+}
+
+.blog-post p {
+	margin-bottom: 20px;
+}
+
+.blog-post blockquote {
+  padding: 0 0 0 15px;
+  margin: 0 0 20px;
+  border-left: 4px solid #f1c40f;
+  color: #a7a7a7;
+  font-size: 19px;
+}
+
+.blog-post tag {
+	color: #a7a7a7;
+	font-size: 14px;
+	letter-spacing: 2px;
+}
+
+.blog-post h4 {
+	margin-top: 0px;
+	font-size: 19px;
+	line-height: 30px;
+	letter-spacing: 1px;
+	text-align: left;
+	font-weight: 700;
+}
+
+/* ========== SIDEBAR CONF ========== */
+
+.sidebar-zone {
+	padding-top: 40px;
+	padding-bottom: 120px;
+	margin-bottom: 0px;
+}
+
+.sidebar-zone i {
+	vertical-align: middle;
+}
+
+.sidebar-zone h4 {
+	font-weight: 500;
+}
+
+.sidebar-zone p {
+	font-size: 14px;
+}
+
+.sidebar-zone h6 {
+	font-weight: 700;
+}
+
+.popular-posts { 
+	margin: 0px;
+	padding-left: 0px;
+	}
+	
+.popular-posts li {
+	list-style: none; 
+	margin-bottom: 20px; 
+	min-height: 70px;
+}
+.popular-posts li a, 
+.popular-posts li a:hover {
+	color:#2f2f2f; 
+	text-decoration: none;
+	}
+	
+.popular-posts li img {
+	float: left; 
+	margin-right: 20px;
+	}
+	
+.popular-posts li em {
+	font-family: 'Raleway', sans-serif;
+	font-size: 12px;
+	}
+
+p > tag {
+	color:#b1b1b1;
+	font-size: 12px;
+	font-weight: 500;
+}
+
+
+
 
 
 /* ==========================================================================
@@ -518,18 +583,18 @@ a:after {
 	left: 0;
 	padding: 20px;
 	color: #fff;
-	background: #3498db;
+	background: #2c3e50;
+	font-weight: 700;
 }
 
 .grid figcaption h5 {
 	margin: 0;
 	padding-top: 0px;
-	padding-left: 20px;
+	padding-left: 10px;
 	padding-bottom: 5px;
 	color: #fff;
-	font-weight: 700;
 	text-align: left;
-	letter-spacing: 2px;
+	letter-spacing: 1px;
 	
 }
 
@@ -538,9 +603,10 @@ a:after {
 	padding: 5px 10px;
 	margin-left: 20px;
 	display: inline-block;
-	background: #2f2f2f;
+	background: transparent;
 	color: #fff;
 	font-size: 13px;
+	font-weight: 700;
 }
 
 /* Caption Style */
@@ -596,61 +662,124 @@ a:after {
 	right: 30px;
 }
 
-
 /* ==========================================================================
-   Blog Section
+   Pricing Tables
    ========================================================================== */
-
-.blog-bg {
-	background: #2b2b2b;
-	padding-right: 0px;
-	padding-left: 0px;
-	
+   
+.pricing-option {
+    padding-bottom: 40px;
 }
 
-.blog-bg h4 {
-	color: #dadada;
-	padding-top: 0px;
+.pricing-option .pricing-top {
+    position: relative;
+    background: #222;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+
+    padding: 40px 20px 30px 20px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-.blog-bg h5 {
-	color: #dadada;
-	font-size: 11px;
+.pricing-option .pricing-top .special-label {
+    display: block;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #f1c40f;
+    text-transform: uppercase;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 3px 0;
 }
 
-.blog-content {
-	padding-top: 10px;
-	background: #f2f2f2;
+.special .pricing-top {
+    background: black;
+}
+
+.pricing-option .pricing-edition {
+    text-transform: uppercase;
+    display: block;
+    font-size: 25px;
+    letter-spacing: 8px;
+}
+
+.pricing-option .price {
+    display: inline-block;
+    position: relative;
+}
+
+.pricing-option .price sup {
+    position: absolute;
+    top: 50px;
+    left: -10px;
+    font-size: 24px;
+}
+
+.pricing-option .price .price-amount {
+    font-size: 108px;
+    letter-spacing: -4px;
+}
+
+.pricing-option .price small {
+    position: relative;
+    left: -10px;
+    font-size: 18px;
+}
+
+.pricing-option ul {
+    list-style: none;
+    margin: 0;
+    background: #eee;
+    text-align: center;
+    padding-left: 0px;
+}
+
+.pricing-option ul li {
+    border-bottom: solid 1px #e1e1e1;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.pricing-option .pricing-signup {
+    display: block;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 15px 10px;
+    color: white;
+    background: #f1c40f;
+}
+
+.pricing-option .pricing-signup:hover {
+    background: #f39c12;
 }
 
 
-/* ==========================================================================
-   MEDIA QUERIES
-   ========================================================================== */
 
+@media screen and (max-width: 400px) {
 
-@media screen and (max-width:1050px), screen and (max-device-width:1050px){
-	body .header{background-attachment: scroll;}
+#db .col-lg-2 {
+	padding-left: 20%;
 }
 
-
-/*ipad portrait*/
-@media only screen and (min-device-width:768px) and (max-device-width : 1024px) and (orientation : portrait){
-	.header{background-attachment: scroll;}
 }
 
-@media screen and (max-width:769px) {
-	#headerwrap h1 {
-		font-size: 80px;
-	}
-	#headerwrap p {
-		font-size: 30px;
-		line-height: 38px;
-	}
+@media screen and (min-width: 401px) and (max-width: 700px) {
+
+#db .col-lg-2 {
+	padding-left: 30%;
 }
 
-.erb-image-wrapper img{
-    max-width:100%;
-    height:auto;
-    display:block;
+}
+
+@media screen and (min-width: 700px) and (max-width: 1100px) {
+
+#db .col-lg-2 {
+	padding-left: 30%;
+}
+
 }
